feat: add support for ServiceTask call API by complete activity
- Introduces the ability to trigger external API calls automatically when a ServiceTask reaches the `complete` lifecycle state.
- Implements the API handler to map process variables to the API payload.
- Adds error handling and timeout configurations for the outgoing requests.
- Includes unit and integration tests to verify the completion hook.